feat(procedimientos): implementar SPs para actualizar info y roles; realizar pruebas con Spring Security desactivado; agregar paquete 'exception' para manejo centralizado de errores